--- a/components/scss/style.scss
+++ b/components/scss/style.scss
@@ -6,5 +6,49 @@
 @import "variables";
 
 body{
-	
+	height:1000px;
+}
+
+.landscape{
+	height:100%;
+	width:100%;
+	overflow:hidden;
+	position:fixed;
+	z-index:-10;
+	top:0;
+
+	.foreground{
+		background-color:#152744;
+		position:absolute;
+		width:100%;
+		height:300px;
+		top:750px;
+	}
+	.midground{
+		background-color:#367591;
+		position:absolute;
+		width:100%;
+		height:250px;
+		top:500px;
+	}
+	.background{
+		background-color:#61D2B4;
+		height:200px;
+		top:300px;
+		width:100%;
+		position:absolute;
+	}
+	.sky{
+		background-color: #9DFDC7;
+		height:300px;
+		width:100%;
+		position:absolute;
+	}
+}
+
+.content{
+	background-color:#152744;
+	height:100%;
+	z-index:100;
+	margin-top:1080px;
 }
